# agent_hub

./: .env.example  .gitignore  README.md  agenthub_auto_agents_spec.md  agenthub_dag_teams_spec.md  agenthub_dev_guide.md  agenthub_features.html  agenthub_parallel_sessions_spec_v2.md  parallel_sessions_implementation_plan.md  pyproject.toml
benchmarks/: bench_comparative.py  bench_impact.py  results.html
examples/: 01_basic_usage.py  02_custom_agent.py  03_auto_agents.py
src/agenthub/: __init__.py  __main__.py  cli.py  config.py  context.py  hub.py  mcp_server.py  models.py  repo_map.py  routing.py  setup.py  setup_mcp.py
src/agenthub/agents/: __init__.py  base.py  code_agent.py  domain_tools.py  project_tools.py
src/agenthub/auto/: __init__.py  analyzer.py  config.py  cross_context.py  discovery.py  domain_analysis.py  dynamic_rnr.py  factory.py  ignore.py  import_graph.py  knowledge_graph.py  manager.py  routing_index.py  smart_factory.py  sub_agent_manager.py  sub_agent_policy.py  tier_a_discovery.py  tree.py
src/agenthub/cache/: __init__.py  git_cache.py  watcher.py
src/agenthub/dashboard/: __init__.py  observer.py  server.py
src/agenthub/llm/: __init__.py  base.py  claude.py  openai.py
src/agenthub/parallel/: __init__.py  analyzer.py  dashboard.py  decomposer.py  escalation.py  manager.py  merge.py  models.py  orchestrator.py  output.py  prompts.py  teams_adapter.py
src/agenthub/qc/: __init__.py  models.py  pipeline.py  qc_agent.py
src/agenthub/teams/: __init__.py  classifier.py  config.py  dag.py  decomposer.py  executor.py  synthesizer.py
templates/: CLAUDE.md  hooks.json
tests/: __init__.py  conftest.py  test_domain_tools.py  test_hub.py  test_hub_retry.py  test_impact_graph.py  test_knowledge_graph.py  test_mcp_server.py  test_models.py  test_orchestration.py  test_project_tools.py  test_repo_map.py  test_routing.py  test_scope_check.py  test_tools_integration.py
tests/test_auto/: __init__.py  test_analyzer.py  test_sub_agents.py  test_tree.py
tests/test_parallel/: __init__.py  test_dashboard.py  test_orchestrator.py  test_output.py
