[project]
name = "agenthub"
version = "2.0.0"
description = "Impact analysis for Claude Code — prevent breaking changes in large repos"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "John"}
]
keywords = ["claude-code", "mcp", "impact-analysis", "static-analysis", "import-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agenthub = "agenthub.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/white-dots/agent_hub"
Repository = "https://github.com/white-dots/agent_hub"
Issues = "https://github.com/white-dots/agent_hub/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenthub"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agenthub --cov-report=term-missing"
